testing/errors/test_write_txts_readonly.txts
IMPORT txts
VARIABLE txts.NAME "should fail"
